--- a/index.html
+++ b/index.html
@@ -3,64 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rebitcoin - The 2024 Meme Halving Challenger</title>
+    <title>Rebitcoin</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #1a1a1a;
-            color: #f2f2f2;
+            background-color: #000;
+            color: #ffd700;
             text-align: center;
-            padding: 40px;
+            padding: 20px;
         }
-        .header {
-            font-size: 2em;
+        .background-pattern {
+            background-image: url('your-pattern-image-url.jpg'); /* Replace with your background pattern image URL */
+            background-size: cover;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0.2;
+            z-index: -1;
+        }
+        .title {
+            font-size: 48px;
+            font-family: 'Press Start 2P', cursive; /* Pixelated font */
             margin-bottom: 20px;
         }
-        .description {
-            font-size: 1.2em;
-            margin-bottom: 30px;
+        .logo-container {
+            margin-bottom: 20px;
         }
-        .features {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-        }
-        .feature {
-            width: 30%;
-            padding: 20px;
-            border: 1px solid #f2f2f2;
-            border-radius: 10px;
-            background-color: #292929;
-        }
-        .feature h3 {
-            margin-top: 0;
-        }
-        .footer {
-            margin-top: 40px;
-            font-size: 0.8em;
+        .logo {
+            width: 200px; /* Adjust as needed */
+            height: auto;
         }
     </style>
 </head>
 <body>
-    <div class="header">Welcome to Rebitcoin</div>
-    <div class="description">
-        The 2024 Meme Halving Challenger, poised to compete with Dogecoin, Shiba Inu, and Bonk.
+    <div class="background-pattern"></div>
+    <div class="title">Rebitcoin</div>
+    <div class="logo-container">
+        <img src="logo1.png" alt="Rebitcoin Logo" class="logo">
     </div>
 
-    <div class="features">
-        <div class="feature">
-            <h3>Unique Technology</h3>
-            <p>Rebitcoin utilizes cutting-edge blockchain technology to ensure fast and secure transactions.</p>
-        </div>
-        <div class="feature">
-            <h3>Community Driven</h3>
-            <p>Join a vibrant community supporting the next big meme coin in the cryptocurrency market.</p>
-        </div>
-        <div class="feature">
-            <h3>Future of Finance</h3>
-            <p>Be a part of the revolution that is set to change the face of digital currency.</p>
-        </div>
-    </div>
+    <!-- Your content goes here -->
+
+</body>
+</html>
 
     <div class="footer">
         © 2023 Rebitcoin. All rights reserved.
