--- a/index.html
+++ b/index.html
@@ -1,56 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rebitcoin</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #000;
-            color: #ffd700;
-            text-align: center;
-            padding: 20px;
-        }
-        .background-pattern {
-            background-image: url('your-pattern-image-url.jpg'); /* Replace with your background pattern image URL */
-            background-size: cover;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            opacity: 0.2;
-            z-index: -1;
-        }
-        .title {
-            font-size: 48px;
-            font-family: 'Press Start 2P', cursive; /* Pixelated font */
-            margin-bottom: 20px;
-        }
-        .logo-container {
-            margin-bottom: 20px;
-        }
-        .logo {
-            width: 200px; /* Adjust as needed */
-            height: auto;
-        }
-    </style>
-</head>
-<body>
-    <div class="background-pattern"></div>
-    <div class="title">Rebitcoin</div>
-    <div class="logo-container">
-        <img src="logo1.png" alt="Rebitcoin Logo" class="logo">
-    </div>
 
-    <!-- Your content goes here -->
-
-</body>
-</html>
-
-    <div class="footer">
-        © 2023 Rebitcoin. All rights reserved.
-    </div>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="THE DOG COIN OF THE PEOPLE"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>BONK COIN</title><script defer="defer" src="/static/js/main.17ab3e9a.js"></script><link href="/static/css/main.9540d494.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
