--- a/index.html
+++ b/index.html
@@ -1,2 +1,54 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ReBitcoin</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background: linear-gradient(to right, black, yellow);
+            color: white;
+            text-align: center;
+        }
+        .navbar {
+            padding: 10px;
+            text-align: right;
+        }
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            margin: 0 10px;
+            border-radius: 15px;
+            background-color: rgba(255, 255, 255, 0.7);
+            color: black;
+            text-decoration: none;
+        }
+        .logo {
+            margin-top: 20px;
+        }
+        .description {
+            margin: 20px auto;
+            width: 80%;
+            font-size: 1.2em;
+        }
+    </style>
+</head>
+<body>
+    <div class="navbar">
+        <a href="#" class="button">ReBitcoin</a>
+        <a href="#" class="button">Tokenomics</a>
+        <a href="#" class="button">NFT's</a>
+    </div>
 
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="THE DOG COIN OF THE PEOPLE"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>BONK COIN</title><script defer="defer" src="/static/js/main.17ab3e9a.js"></script><link href="/static/css/main.9540d494.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+    <div class="logo">
+        <img src="logo1.png" alt="ReBitcoin Logo" width="200px">
+    </div>
+
+    <div class="description">
+        <p>ReBitcoin is a meme coin set to compete against Dogecoin, Shiba Inu, and Bonk, capitalizing on growth opportunities during the 2024 halving. Launching on January 1, 2024, it is part of the Binance network. ReBitcoin is designed purely for fun, speculation, and carries inherent risks to be borne individually. It holds no intrinsic utility.</p>
+    </div>
+</body>
+</html>
