--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background: linear-gradient(to right, black, yellow);
-            color: white;
+            background: linear-gradient(to right, yellow, orange);
+            color: black;
             text-align: center;
         }
         .navbar {
             padding: 10px;
             text-align: right;
         }
-        .button {
+        .button, .description {
             display: inline-block;
             padding: 10px 20px;
             margin: 0 10px;
@@ -29,10 +29,9 @@
         .logo {
             margin-top: 20px;
         }
-        .description {
-            margin: 20px auto;
-            width: 80%;
-            font-size: 1.2em;
+        .footer {
+            margin-top: 30px;
+            font-size: 0.8em;
         }
     </style>
 </head>
@@ -48,7 +47,15 @@
     </div>
 
     <div class="description">
-        <p>ReBitcoin is a meme coin set to compete against Dogecoin, Shiba Inu, and Bonk, capitalizing on growth opportunities during the 2024 halving. Launching on January 1, 2024, it is part of the Binance network. ReBitcoin is designed purely for fun, speculation, and carries inherent risks to be borne individually. It holds no intrinsic utility.</p>
+        ReBitcoin is a meme coin set to compete against Dogecoin, Shiba Inu, and Bonk, capitalizing on growth opportunities during the 2024 halving. Launching on January 1, 2024, it is part of the Binance network. ReBitcoin is designed purely for fun, speculation, and carries inherent risks to be borne individually. It holds no intrinsic utility.
+    </div>
+
+    <div class="description">
+        Total Supply: 21 Million
+    </div>
+
+    <div class="footer">
+        © 2023 ReBitcoin. All rights reserved.
     </div>
 </body>
 </html>
