--- a/index.html
+++ b/index.html
@@ -17,14 +17,19 @@
             padding: 10px;
             text-align: right;
         }
-        .button, .description {
+        .button, .description-box {
             display: inline-block;
             padding: 10px 20px;
-            margin: 0 10px;
+            margin: 20px 10px;
             border-radius: 15px;
             background-color: rgba(255, 255, 255, 0.7);
             color: black;
             text-decoration: none;
+        }
+        .description-box {
+            text-align: left;
+            width: 60%;
+            margin: 20px auto;
         }
         .logo {
             margin-top: 20px;
@@ -46,12 +51,9 @@
         <img src="logo1.png" alt="ReBitcoin Logo" width="200px">
     </div>
 
-    <div class="description">
-        ReBitcoin is a meme coin set to compete against Dogecoin, Shiba Inu, and Bonk, capitalizing on growth opportunities during the 2024 halving. Launching on January 1, 2024, it is part of the Binance network. ReBitcoin is designed purely for fun, speculation, and carries inherent risks to be borne individually. It holds no intrinsic utility.
-    </div>
-
-    <div class="description">
-        Total Supply: 21 Million
+    <div class="description-box">
+        <p>ReBitcoin is a meme coin set to compete against Dogecoin, Shiba Inu, and Bonk, capitalizing on growth opportunities during the 2024 halving. Launching on January 1, 2024, it is part of the Binance network. ReBitcoin is designed purely for fun, speculation, and carries inherent risks to be borne individually. It holds no intrinsic utility.</p>
+        <p>Total Supply: 21 Million</p>
     </div>
 
     <div class="footer">
