--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@
             text-decoration: none;
         }
         .description-box {
-            text-align: left;
+            text-align: justify;
             width: 60%;
             margin: 20px auto;
+            padding: 20px;
+            box-sizing: border-box;
+            font-weight: bold;
         }
         .logo {
             margin-top: 20px;
@@ -52,7 +55,7 @@
     </div>
 
     <div class="description-box">
-        <p>ReBitcoin is a meme coin set to compete against Dogecoin, Shiba Inu, and Bonk, capitalizing on growth opportunities during the 2024 halving. Launching on January 1, 2024, it is part of the Binance network. ReBitcoin is designed purely for fun, speculation, and carries inherent risks to be borne individually. It holds no intrinsic utility.</p>
+        <p>ReBitcoin is a meme coin set to compete against Dogecoin, Shiba Inu, and Bonk, capitalizing on growth opportunities during the 2024 halving. Launching on January 1, 2024, it is part of the Binance network. ReBitcoin is designed purely for fun, speculation, and carries inherent risks to be borne individually. It holds no intrinsic utility. Each transaction incurs a 1% fee, which contributes to the marketing wallet for the project's development.</p>
         <p>Total Supply: 21 Million</p>
     </div>
 
