--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
     </div>
 
     <div class="description-box">
-        <p>ReBitcoin is a meme coin set to compete against Dogecoin, Shiba Inu, and Bonk, capitalizing on growth opportunities during the 2024 halving. Launching on January 1, 2024, it is part of the Binance network. ReBitcoin is designed purely for fun, speculation, and carries inherent risks to be borne individually. It holds no intrinsic utility. Each transaction incurs a 1% fee, which contributes to the marketing wallet for the project's development.</p>
-        <p>Total Supply: 21 Million</p>
+        ReBitcoin: The Second Chance of 2024. With a market cap of 21 million and a 1% commission for the marketing wallet.
     </div>
 
     <div class="footer">
