--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
 
     <div class="description-box">
-        ReBitcoin: The Second Chance of 2024. With a market cap of 21 million and a 1% commission for the marketing wallet.
+        The Second Chance of 2024. With a market cap of 21 million and a 1% commission for the marketing wallet.Created solely for entertainment purposes with no practical utility.
     </div>
 
     <div class="footer">
