--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background: linear-gradient(to right, yellow, orange);
-            color: black;
+            background-color: black; /* Cambiar el fondo a negro */
+            color: white; /* Cambiar el color del texto a blanco */
             text-align: center;
         }
         .navbar {
@@ -22,8 +22,8 @@
             padding: 10px 20px;
             margin: 20px 10px;
             border-radius: 15px;
-            background-color: rgba(255, 255, 255, 0.5);
-            color: black;
+            background-color: rgba(255, 255, 255, 0.8); /* Cambiar el fondo del botón a blanco sólido */
+            color: black; /* Cambiar el color del texto del botón a negro */
             text-decoration: none;
         }
         .description-box {
@@ -33,6 +33,8 @@
             padding: 20px;
             box-sizing: border-box;
             font-weight: bold;
+            background-color: rgba(0, 0, 0, 0.8); /* Cambiar el fondo del cuadro de descripción a negro sólido */
+            color: white; /* Cambiar el color del texto del cuadro de descripción a blanco */
         }
         .logo {
             margin-top: 20px;
@@ -45,7 +47,7 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="#" class="button">ReBitcoin</a>
+        <a href="#" class="button">EvilPawsCoin</a>
         <a href="#" class="button">Tokenomics</a>
         <a href="#" class="button">NFT's</a>
     </div>
@@ -55,11 +57,11 @@
     </div>
 
     <div class="description-box">
-        The Second Chance of 2024. With a market cap of 21 million and a 1% commission for the marketing wallet. Created solely for entertainment purposes with no practical utility.
+        A wicked meme token on Solana, determined to reign supreme in the meme coin world. Join us as we unleash the dark side of crypto and carve our path to dominance. Don't miss out on the opportunity to be part of the most powerful meme coin community. Created solely for entertainment purposes with no practical utility.
     </div>
 
     <div class="footer">
-        © 2023 ReBitcoin. All rights reserved.
+        © 2024 EvilPawsCoin. All rights reserved.
     </div>
 </body>
 </html>
