--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             padding: 10px 20px;
             margin: 20px 10px;
             border-radius: 15px;
-            background-color: white; /* Cambiar el fondo del botón a blanco sólido */
+            background-color: rgba(255, 255, 255, 0.5); /* Hacer los botones ligeramente transparentes */
             color: black; /* Cambiar el color del texto del botón a negro */
             text-decoration: none;
         }
@@ -33,20 +33,11 @@
             padding: 20px;
             box-sizing: border-box;
             font-weight: bold;
-            background-color: white; /* Cambiar el fondo del cuadro de descripción a blanco */
-            color: black; /* Cambiar el color del texto del cuadro de descripción a negro */
+            background-color: rgba(255, 255, 255, 0.5); /* Hacer la descripción ligeramente transparente */
+            color: black; /* Cambiar el color del texto de la descripción a negro */
         }
         .logo {
             margin-top: 20px;
-            animation: floatLogo 5s infinite alternate; /* Agregar animación de movimiento */
-        }
-        @keyframes floatLogo {
-            0% {
-                transform: translateY(0);
-            }
-            100% {
-                transform: translateY(-10px); /* Mover el logo hacia arriba */
-            }
         }
         .footer {
             margin-top: 30px;
