--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background-color: black; /* Cambiar el fondo a negro */
+            background: radial-gradient(circle, #0f0f0f, #000); /* Mejora del fondo negro */
             color: white; /* Cambiar el color del texto a blanco */
             text-align: center;
         }
@@ -17,24 +17,23 @@
             padding: 10px;
             text-align: right;
         }
-        .button, .description-box {
+        .button, .description-box, .roadmap-step {
             display: inline-block;
-            padding: 10px 20px;
             margin: 20px 10px;
-            border-radius: 15px;
-            background-color: rgba(255, 255, 255, 0.5); /* Hacer los botones ligeramente transparentes */
-            color: black; /* Cambiar el color del texto del botón a negro */
-            text-decoration: none;
+            border-radius: 30px; /* Cambiar la forma de los recuadros */
+            padding: 20px;
+            background-color: rgba(255, 255, 255, 0.1); /* Hacer ligeramente transparente */
+            color: white; /* Cambiar el color del texto a blanco */
+            text-align: left;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Agregar sombra para un aspecto más profesional */
         }
         .description-box {
-            text-align: justify;
             width: 60%;
             margin: 20px auto;
             padding: 20px;
             box-sizing: border-box;
             font-weight: bold;
-            background-color: rgba(255, 255, 255, 0.5); /* Hacer la descripción ligeramente transparente */
-            color: black; /* Cambiar el color del texto de la descripción a negro */
+            background-color: rgba(255, 255, 255, 0.1); /* Hacer ligeramente transparente */
         }
         .logo {
             margin-top: 20px;
@@ -58,6 +57,19 @@
 
     <div class="description-box">
         A wicked meme token on Solana, determined to reign supreme in the meme coin world. Join us as we unleash the dark side of crypto and carve our path to dominance. Don't miss out on the opportunity to be part of the most powerful meme coin community. Created solely for entertainment purposes with no practical utility.
+    </div>
+
+    <div class="roadmap-step">
+        <h2>Phase 1: Launch</h2>
+        <p>Launch the EvilPawsCoin token and distribute it to initial holders.</p>
+    </div>
+    <div class="roadmap-step">
+        <h2>Phase 2: Community Building</h2>
+        <p>Engage with the community through social media, community events, and partnerships.</p>
+    </div>
+    <div class="roadmap-step">
+        <h2>Phase 3: Development</h2>
+        <p>Continue development of the EvilPawsCoin ecosystem, including additional features and utilities.</p>
     </div>
 
     <div class="footer">
