--- a/index.html
+++ b/index.html
@@ -31,15 +31,14 @@
         .description-box {
             display: inline-block;
             vertical-align: top; /* Alinear elementos al tope */
-            margin: 20px 10px;
+            margin: 20px auto;
             border-radius: 30px; /* Cambiar la forma del recuadro */
             padding: 20px;
-            background-color: rgba(255, 255, 0, 0.3); /* Amarillo transparente */
-            color: black; /* Cambiar el color del texto a negro */
+            background-color: rgba(0, 0, 0, 0.7); /* Hacer ligeramente transparente */
+            color: white; /* Cambiar el color del texto a blanco */
             text-align: left;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Agregar sombra para un aspecto más profesional */
-            width: 30%; /* Cambiar el ancho para dejar espacio para el logo */
-            margin-right: 20px; /* Añadir margen a la derecha para separar del logo */
+            width: 60%; /* Cambiar el ancho para ocupar más espacio */
         }
         .logo {
             margin-top: 20px;
@@ -48,7 +47,8 @@
         }
         .roadmap-container {
             width: 60%; /* Utilizar el 60% del ancho para el roadmap */
-            text-align: left; /* Alinear texto del roadmap a la izquierda */
+            text-align: center; /* Centrar el contenido */
+            margin: 0 auto; /* Centrar el contenedor */
         }
         .roadmap-step {
             margin: 20px 10px;
