--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
         .navbar {
             padding: 10px;
-            text-align: right;
+            text-align: center; /* Alinear el texto al centro */
         }
         .button {
             display: inline-block;
@@ -34,14 +34,15 @@
             margin: 20px auto;
             border-radius: 30px; /* Cambiar la forma del recuadro */
             padding: 20px;
-            background-color: rgba(0, 0, 0, 0.7); /* Hacer ligeramente transparente */
+            background-color: rgba(50, 50, 50, 0.7); /* Gris oscuro ligeramente transparente */
             color: white; /* Cambiar el color del texto a blanco */
             text-align: left;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Agregar sombra para un aspecto más profesional */
-            width: 60%; /* Cambiar el ancho para ocupar más espacio */
+            width: 40%; /* Cambiar el ancho para ocupar más espacio */
         }
         .logo {
             margin-top: 20px;
+            margin-right: 20px; /* Añadir margen a la derecha para separar del texto */
             display: inline-block; /* Hacer que el logo sea inline-block para que los elementos fluyan correctamente */
             vertical-align: top; /* Alinear el logo al tope */
         }
@@ -67,17 +68,16 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="#" class="button">EvilPawsCoin</a>
         <a href="#" class="button">Tokenomics</a>
-        <a href="#" class="button">NFT's</a>
-    </div>
-
-    <div class="description-box">
-        <p>A wicked meme token on Solana, determined to reign supreme in the meme coin world. Join us as we unleash the dark side of crypto and carve our path to dominance. Don't miss out on the opportunity to be part of the most powerful meme coin community. Created solely for entertainment purposes with no practical utility.</p>
+        <a href="#" class="button">Roadmap</a>
     </div>
 
     <div class="logo">
         <img src="logo1.png" alt="EvilPawsCoin Logo" width="200px">
+    </div>
+
+    <div class="description-box">
+        <p>A wicked meme token on Solana, determined to reign supreme in the meme coin world. Join us as we unleash the dark side of crypto and carve our path to dominance. Don't miss out on the opportunity to be part of the most powerful meme coin community. Created solely for entertainment purposes with no practical utility.</p>
     </div>
 
     <div class="roadmap-container">
