--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
             margin-top: 30px;
             font-size: 0.8em;
         }
+
+        @media screen and (max-width: 600px) {
+            .description-box,
+            .roadmap-container {
+                text-align: justify;
+            }
+        }
     </style>
 </head>
 <body>
@@ -90,13 +97,4 @@
             <p>Engage with the community through social media, community events, and partnerships.</p>
         </div>
         <div class="roadmap-step">
-            <h2>Phase 3: Development</h2>
-            <p>Continue development of the EvilPawsCoin ecosystem, including additional features and utilities.</p>
-        </div>
-    </div>
-
-    <div class="footer">
-        © 2024 EvilPawsCoin. All rights reserved.
-    </div>
-</body>
-</html>
+            <h2>Phase 3:
