--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             padding: 20px;
             background-color: rgba(50, 50, 50, 0.7); /* Gris oscuro ligeramente transparente */
             color: white; /* Cambiar el color del texto a blanco */
-            text-align: left;
+            text-align: justify; /* Justificar el texto */
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Agregar sombra para un aspecto más profesional */
             width: 40%; /* Cambiar el ancho para ocupar más espacio */
         }
@@ -57,19 +57,12 @@
             padding: 20px;
             background-color: rgba(255, 255, 255, 0.1); /* Hacer ligeramente transparente */
             color: white; /* Cambiar el color del texto a blanco */
-            text-align: left;
+            text-align: justify; /* Justificar el texto */
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Agregar sombra para un aspecto más profesional */
         }
         .footer {
             margin-top: 30px;
             font-size: 0.8em;
-        }
-
-        @media screen and (max-width: 600px) {
-            .description-box,
-            .roadmap-container {
-                text-align: justify;
-            }
         }
     </style>
 </head>
@@ -97,4 +90,13 @@
             <p>Engage with the community through social media, community events, and partnerships.</p>
         </div>
         <div class="roadmap-step">
-            <h2>Phase 3:
+            <h2>Phase 3: Development</h2>
+            <p>Continue development of the EvilPawsCoin ecosystem, including additional features and utilities.</p>
+        </div>
+    </div>
+
+    <div class="footer">
+        © 2024 EvilPawsCoin. All rights reserved.
+    </div>
+</body>
+</html>
