--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             text-decoration: none;
             text-transform: uppercase; /* Convertir texto a mayúsculas */
             font-weight: bold; /* Hacer el texto en negrita */
+            transition: background-color 0.3s ease; /* Transición suave para el cambio de color de fondo */
+        }
+        .button:hover {
+            background-color: rgba(255, 255, 255, 0.7); /* Cambia el color de fondo al pasar el mouse */
         }
         .description-box {
             display: inline-block;
